--- a/surya/index.html
+++ b/surya/index.html
@@ -4,6 +4,6 @@
 	<title> COURSERA </title>
 </head>
 <body>
-<h1> <center> Vanakkam di mapla , salemla irrundhu ! Nalla irrukiyaada ? </center></h1>
+<h1> <center> stackoverflow.com</center></h1>
 </body>
 </html>
