--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Module 2 solution</title>
-<link rel="stylesheet" href="https://github.com/Jayasurya-karthikeyan/courseratest/blob/master/module2-solution/styles.css">
+<link rel="stylesheet" href="styles.css">
 <!-- linking to external stylesheets-->
 <meta charset="utf-8">
 <!--declaring character set 8 which is the latest character set with all compatible characters -->
